--- a/ATIVIDADE 5/ATIVIDADE 2/cartao.html
+++ b/ATIVIDADE 5/ATIVIDADE 2/cartao.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cartão de Visita da Fern</title>
+    <title>Cartão de Visita da Gabi</title>
     <link rel="stylesheet" href="cartao.css">
 </head>
 <body>
     <div class="cartao-container">
-        <h1 class="nome-completo">Fern</h1>
-        <p class="cargo">Maga Viajante</p>
-        <p class="contato">Discípula de Frieren | @fern.magia</p>
+        <h1 class="nome-completo">Gabrieli da Silva Marcelino</h1>
+        <p class="cargo"> Estudante de Letras e de Desenvolvimento de Sistema </p>
+        <p class="contato"> São Paulo | gabih.12161@gmail.com</p>
+        <p class="linkdin"> 
+            <a href="https://www.linkedin.com/in/gabrieli-da-silva-administrativo/" target="_blank">Linkedin</a>
+        </p>
     </div>
 </body>
 </html>
